Refactoring and add integration test
