# docs/swagger.json
@@ -13,7 +13,7 @@
                     "files"
                 ],
                 "summary": "Get all files on the server",
-                "operationId": "getFiles",
+                "operationId": "GetFiles",
                 "responses": {
                     "200": {
                         "description": "Files available",
@@ -40,7 +40,7 @@
                     "files"
                 ],
                 "summary": "Add file",
-                "operationId": "addFile",
+                "operationId": "AddFile",
                 "parameters": [
                     {
                         "type": "file",
@@ -81,7 +81,7 @@
                     "files"
                 ],
                 "summary": "Get file info",
-                "operationId": "getFile",
+                "operationId": "GetFile",
                 "parameters": [
                     {
                         "type": "string",
@@ -129,7 +129,7 @@
                     "files"
                 ],
                 "summary": "Update file",
-                "operationId": "updateFile",
+                "operationId": "UpdateFile",
                 "parameters": [
                     {
                         "type": "string",
@@ -181,7 +181,7 @@
                     "files"
                 ],
                 "summary": "Delete file",
-                "operationId": "deleteFile",
+                "operationId": "DeleteFile",
                 "parameters": [
                     {
                         "type": "string",
